--- a/Test_Project/test-output/old/Default suite/methods-alphabetical.html
+++ b/Test_Project/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>15/01/30 10:22:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Annotate_Test.Annotate()[pri:0, instance:test_package.Annotate_Test@546a03af]">Annotate</td> 
-  <td>main@1682092198</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.AdminSettings()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">AdminSettings</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:37</td>   <td>5102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.ArchivingManagement()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">ArchivingManagement</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:42</td>   <td>10327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.Authentication()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">Authentication</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:47</td>   <td>15517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.DICOMSettings()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">DICOMSettings</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:52</td>   <td>20559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.EHRSettings()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">EHRSettings</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:57</td>   <td>25675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.ManageCodecs()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">ManageCodecs</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:14:02</td>   <td>30632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.ManageStreams()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">ManageStreams</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:28</td>   <td>-3081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:34</td>   <td>2529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:39</td>   <td>7848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:45</td>   <td>13053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:50</td>   <td>18072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:13:55</td>   <td>23185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:14:00</td>   <td>28146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:14:05</td>   <td>33469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CopyOfTest_StreamConnect_Logout_8_for_IE.SetProperty()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">&gt;&gt;SetProperty</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>15/02/06 12:14:08</td>   <td>35996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CopyOfTest_StreamConnect_Logout_8_for_IE.UserLogs()[pri:0, instance:test_package.CopyOfTest_StreamConnect_Logout_8_for_IE@649d209a]">UserLogs</td> 
+  <td>main@25126016</td>   <td></td> </tr>
 </table>
